# kavita-ingest

./: .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  docker-compose.yml  kavita.py  metadata.py  pyproject.toml  settings.py  specifications.txt
routes/: api.py  pages.py
templates/: index.html  login.html  settings.html
