[project]
name = "kavita-ingest"
version = "0.1.0"
description = "Bulk book ingestion tool for Kavita with AI-powered metadata"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ebooklib>=0.20",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pypdf>=6.13.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
